# fastapi-tarpit

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
example/: example.py
examples/: http-tarpit.py
fastapi_tarpit/: __init__.py  client.py  config.py  middleware.py  tarpit.py
